[tool.poetry]
name = "test-execution-orchestrator"
version = "0.1.4"
description = "Distributed Test Execution Orchestrator for HIL/SIL bench scheduling, execution, and artifact management."
authors = ["Abhishek <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "orchestrator" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.0"
typer = "^0.12.0"
boto3 = "^1.34.0"
requests = "^2.31.0"

# optional future
# aioboto3 = "^12.0.0"
# opentelemetry-api = "^1.24.0"
# opentelemetry-sdk = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
coverage = "^7.4.0"
ruff = "^0.4.0"
black = "^24.4.0"
mypy = "^1.8.0"
bandit = "^1.7.7"
git-cliff = "^1.3.0"
bump2version = "^1.0.1"

[tool.poetry.scripts]
orchestrator = "orchestrator.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---- Ruff ----
[tool.ruff]
line-length = 120
exclude = ["build", "dist", ".venv"]

# ---- Black ----
[tool.black]
line-length = 120
target-version = ["py311"]

# ---- Mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---- Pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

