[tool.poetry]
name = "test-execution-orchestrator"
version = "0.2.1"
description = "Distributed Test Execution Orchestrator for HIL/SIL bench scheduling, execution, and artifact management."
authors = ["Abhishek <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.0"
typer = "^0.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.14.6"
black = "24.10.0"
mypy = "1.8.0"
bandit = "1.8.6"
pip-audit = "^2.7.0"
pre-commit = "3.7.0"
httpx = "^0.28.1"
types-pyyaml = "^6.0.12.20250915"
mkdocs = "^1.5"
mkdocs-material = "^9.0"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --maxfail=1 --disable-warnings --cov=src --cov-report=xml"
testpaths = ["tests/unit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
